fix: color for dark mode

--- a/src/app/home.css
+++ b/src/app/home.css
@@ -28,7 +28,7 @@
 }
 
 .Section--white {
-  background-color: white;
+  @apply bg-white;
 }
 
 .Section .Title {
